ingress/subdomain.yaml
---
# create deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subdomain-react-dep
  namespace: ing-subdomain-certificate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subdomain-react
  template:
    metadata:
      labels:
        app: subdomain-react
    spec:
      containers:
        - name: react-app
          image: 69966/reactjsimage:latest
          ports:
            - containerPort: 80

# create deployment 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subdomain-spring-dep
  namespace: ing-subdomain-certificate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subdomain-spring
  template:
    metadata:
      labels:
        app: subdomain-spring
    spec:
      containers:
        - name: spring-app
          image: 69966/springgradleimg:1.1.1
          ports:
            - containerPort: 8080
      #     volumeMounts:
      #       - name: nfs-volume
      #         mountPath: /app/src/main/resources/images
      # volumes:
      #   - name: nfs-volume
      #     persistentVolumeClaim:
      #       claimName: nfs-pvc-spring

---
# create service react
apiVersion: v1
kind: Service
metadata:
  name: subdomain-react-svc
  namespace: ing-subdomain-certificate
spec:
  type: ClusterIP
  selector:
    app: subdomain-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
# create service spring
apiVersion: v1
kind: Service
metadata:
  name: subdomain-spring-svc
  namespace: ing-subdomain-certificate
spec:
  type: ClusterIP
  selector:
    app: subdomain-spring
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
# create ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subdomain-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: ing-subdomain-certificate
spec:
  rules:
    - host: f.sen-pai.live
      http:
        paths:
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: subdomain-react-svc
                port:
                  number: 80
          - path: /api/(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: subdomain-spring-svc
                port:
                  number: 80

    # - host: b.sen-pai.live
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: subdomain-spring-svc
    #             port:
    #               number: 80
    #       - path: /ui
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: subdomain-react-svc
    #             port:
    #               number: 80
